# GenieC

./: .env.example  CMakeLists.txt  GenieC-en.c  GenieC.c  LICENSE  LICENSE.txt  README.md  api_key.example.h  app.rc  dormir.h  limpar_tela.h  main.c  main_gui.c
old/: GenieC.c  api_key.example.h  dormir.h  main.c
src/: clima.c  clima.h  config.h  env_loader.c  env_loader.h  gemini.c  gemini.h  grafo.c  grafo.h  historico.c  historico.h  http_utils.c  http_utils.h  ui.c  ui.h  ui_cli.c  ui_loader.c  ui_loader.h
ui/: ui_script.js  ui_style.css  ui_template.html
